tests/snapshots/s4_lottery_view__view_reveal_phase_healthy.snap
---
source: tests/s4_lottery_view.rs
assertion_line: 95
expression: view
---
LotteryView {
    round: Some(
        RoundCard {
            round: 14528,
            block: 2208306,
            block_of_round: 50,
            phase: Reveal,
            phase_label: "reveal",
            segments: [
                PhaseSegment {
                    phase: Commit,
                    state: Done,
                    start_block: 0,
                    end_block: 38,
                },
                PhaseSegment {
                    phase: Reveal,
                    state: Active,
                    start_block: 38,
                    end_block: 76,
                },
                PhaseSegment {
                    phase: Claim,
                    state: Pending,
                    start_block: 76,
                    end_block: 152,
                },
            ],
        },
    ),
    anchors: [
        AnchorRow {
            label: "last won",
            round: 14524,
            delta: Some(
                4,
            ),
            when: "4 rounds ago",
        },
        AnchorRow {
            label: "last played",
            round: 14527,
            delta: Some(
                1,
            ),
            when: "last round",
        },
        AnchorRow {
            label: "last selected",
            round: 14527,
            delta: Some(
                1,
            ),
            when: "last round",
        },
        AnchorRow {
            label: "last frozen",
            round: 0,
            delta: None,
            when: "never",
        },
    ],
    stake: StakeCard {
        status: Healthy,
        staked: "BZZ 10.0000",
        minimum_gas: "BZZ 2.0000",
        reward: "BZZ 142.0000",
        fees: "BZZ 3.0000",
        last_sample: Some(
            "18.4s",
        ),
        why: None,
    },
}
