tests/snapshots/s4_lottery_view__view_unstaked.snap
---
source: tests/s4_lottery_view.rs
assertion_line: 126
expression: view
---
LotteryView {
    round: Some(
        RoundCard {
            round: 14528,
            block: 2208266,
            block_of_round: 10,
            phase: Commit,
            phase_label: "commit",
            segments: [
                PhaseSegment {
                    phase: Commit,
                    state: Active,
                    start_block: 0,
                    end_block: 38,
                },
                PhaseSegment {
                    phase: Reveal,
                    state: Pending,
                    start_block: 38,
                    end_block: 76,
                },
                PhaseSegment {
                    phase: Claim,
                    state: Pending,
                    start_block: 76,
                    end_block: 152,
                },
            ],
        },
    ),
    anchors: [
        AnchorRow {
            label: "last won",
            round: 0,
            delta: None,
            when: "never",
        },
        AnchorRow {
            label: "last played",
            round: 0,
            delta: None,
            when: "never",
        },
        AnchorRow {
            label: "last selected",
            round: 0,
            delta: None,
            when: "never",
        },
        AnchorRow {
            label: "last frozen",
            round: 0,
            delta: None,
            when: "never",
        },
    ],
    stake: StakeCard {
        status: Unstaked,
        staked: "BZZ 0.0000",
        minimum_gas: "BZZ 2.0000",
        reward: "BZZ 142.0000",
        fees: "BZZ 3.0000",
        last_sample: Some(
            "18.4s",
        ),
        why: Some(
            "0 BZZ staked — node cannot participate in redistribution.",
        ),
    },
}
